# tagver

./: AGENTS.md  Cargo.toml  README.md  action.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/benches/: version_calculation.rs
crates/core/src/: config.rs  error.rs  git.rs  lib.rs  tags.rs  version.rs
crates/core/tests/: auto_increment.rs  build_metadata.rs  default_prerelease.rs  log_messages.rs  min_major_minor.rs  tag_prefixes.rs  versions.rs
crates/core/tests/common/: fixtures.rs  git.rs  mod.rs
