[workspace]
members = [
    "crates/core",
    "crates/cli"
]

resolver = "2"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1